<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_loginFragment_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:hint="@string/all_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_loginFragment_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_loginFragment_password"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:hint="@string/all_password"
        app:layout_constraintEnd_toEndOf="@id/textInputLayout_loginFragment_email"
        app:layout_constraintStart_toStartOf="@id/textInputLayout_loginFragment_email"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_loginFragment_email"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_loginFragment_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_loginFragment_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/loginFragment_login"
        app:layout_constraintEnd_toEndOf="@id/textInputLayout_loginFragment_email"
        app:layout_constraintStart_toStartOf="@id/textInputLayout_loginFragment_email"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_loginFragment_password" />

    <TextView
        android:id="@+id/textView_loginFragment_createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/loginFragment_singUp"
        android:textColor="@color/purple_500"
        app:layout_constraintStart_toStartOf="@id/textInputLayout_loginFragment_email"
        app:layout_constraintTop_toBottomOf="@id/button_loginFragment_login" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_loginFragment_firstDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        app:layout_constraintEnd_toEndOf="@id/textInputLayout_loginFragment_email"
        app:layout_constraintStart_toStartOf="@id/textInputLayout_loginFragment_email"
        app:layout_constraintTop_toBottomOf="@id/textView_loginFragment_createAccount" />


    <com.google.android.gms.common.SignInButton
        android:id="@+id/button_loginFragment_googleLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        app:layout_constraintEnd_toEndOf="@id/textInputLayout_loginFragment_email"
        app:layout_constraintStart_toStartOf="@id/textInputLayout_loginFragment_email"
        app:layout_constraintTop_toBottomOf="@id/divider_loginFragment_firstDivider" />
</androidx.constraintlayout.widget.ConstraintLayout>
